# clckwrks-dot-com

./: Backups.hs  Main.hs  clckwrks-dot-com.cabal  default.nix  run.sh  shell.nix
debian/: Debianize.hs  changelog  control
