name:                clckwrks-dot-com
version:             0.2.0
synopsis:            clckwrks.com
homepage:            http://www.clckwrks.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Clckwrks
build-type:          Simple
cabal-version:       >=1.8

Executable             clckwrks-dot-com-server
  main-is:             Main.hs
  ghc-options:         -threaded -O2
  build-depends:       base                     > 4 && <5,
                       clckwrks                 == 0.13.*,
                       clckwrks-theme-clckwrks  == 0.2.*,
                       clckwrks-plugin-bugs     == 0.3.*,
                       clckwrks-plugin-media    == 0.3.*,
                       containers               == 0.4.*,
                       happstack-server         >= 7.0 && < 7.2,
                       hsp                      == 0.7.*,
                       mtl                      >= 2.0 && < 2.2,
                       text                     == 0.11.*,
                       web-plugins              == 0.1.*
